// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatsDisplay /> > Code Changes Display > displays Code Changes when line counts are present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       1 ( ✓ 1 x 0 )                                                       │
│  Показник успіху:            100.0%                                                              │
│  Зміни в коді:               +42 -18                                                             │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          100мс                                                               │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       100мс (100.0%)                                                      │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Code Changes Display > hides Code Changes when no lines are added or removed 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       1 ( ✓ 1 x 0 )                                                       │
│  Показник успіху:            100.0%                                                              │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          100мс                                                               │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       100мс (100.0%)                                                      │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in green for high values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 10 x 0 )                                                     │
│  Показник успіху:            100.0%                                                              │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in red for low values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 5 x 5 )                                                      │
│  Показник успіху:            50.0%                                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in yellow for medium values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 9 x 1 )                                                      │
│  Показник успіху:            90.0%                                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > hides Efficiency section when cache is not used 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          100мс                                                               │
│    » Час API:                100мс (100.0%)                                                      │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Використання моделей       Запит  Вхідні токени  Читання кешу Вихідні токени                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 1            100             0            100                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > hides User Agreement when no decisions are made 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       2 ( ✓ 1 x 1 )                                                       │
│  Показник успіху:            50.0%                                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          123мс                                                               │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       123мс (100.0%)                                                      │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Quota Display > renders quota information for unused models 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Використання моделей       Запит              Залишок ліміту                                    │
│  ────────────────────────────────────────────────────────────                                    │
│  gemini-2.5-flash               -   50.0% (Скидання через 2г)                                    │
│                                                                                                  │
│  Ліміти використання поширюються на всі сесії та скидаються щодня.                               │
│  /auth для оновлення або переходу на API ключ.                                                   │
│                                                                                                  │
│                                                                                                  │
│  » Порада: Для повного розподілу токенів запустіть \`/stats model\`.                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the custom title when a title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Agent powering down. Goodbye!                                                                   │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the default title when no title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders a table with two models correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          19.5с                                                               │
│    » Час API:                19.5с (100.0%)                                                      │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Використання моделей       Запит  Вхідні токени  Читання кешу Вихідні токени                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 3            500           500          2 000                    │
│  gemini-2.5-flash               5         15 000        10 000         15 000                    │
│                                                                                                  │
│  Економія: 10 500 (40.4%) вхідних токенів було отримано з кешу, що зменшило витрати.             │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders all sections when all data is present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       2 ( ✓ 1 x 1 )                                                       │
│  Показник успіху:            50.0%                                                               │
│  Згода користувача:          100.0% (1 перевірено)                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          223мс                                                               │
│    » Час API:                100мс (44.8%)                                                       │
│    » Час інструментів:       123мс (55.2%)                                                       │
│                                                                                                  │
│                                                                                                  │
│  Використання моделей       Запит  Вхідні токени  Читання кешу Вихідні токени                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 1             50            50            100                    │
│                                                                                                  │
│  Економія: 50 (50.0%) вхідних токенів було отримано з кешу, що зменшило витрати.                 │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders only the Performance section in its zero state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
